# make-it-lively

./: .gitignore  Makefile  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  storage.py
backend/app/routers/: __init__.py  inpaint.py  perception.py  plan_animation.py  segment.py  upload.py
backend/app/schemas/: __init__.py  animation.py
backend/app/services/: contour.py
backend/tests/: test_contour.py  test_health.py  test_inpaint.py  test_perception.py  test_plan_animation.py  test_segment.py  test_upload.py
backend/tests/e2e/: smoke.md  test_articulated_cat.py  test_pipeline.py
backend/tests/e2e/fixtures/: articulated_perception.json  articulated_plan.json  perception.json  plan_animation.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/components/: LayeredCanvas.vue
frontend/src/lib/: animator.test.ts  animator.ts  api.ts  gifExporter.ts  renderFrame.ts  videoExporter.ts
frontend/src/router/: index.ts
frontend/src/types/: gifenc.d.ts
frontend/src/views/: Editor.vue  Home.vue
scripts/ralph/: .last-branch  prd.json  progress.txt
tasks/: prd-articulated-animation.md  prd-bbox-refinement.md  prd-make-it-lively.md  prd-precise-segmentation.md
